<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:padding="16dp"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/edt_lenght"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="numberDecimal"
        android:hint="@string/lenght" />

    <EditText
        android:id="@+id/edt_width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="numberDecimal"
        android:hint="@string/width"/>

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:hint="@string/height"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/tv_calculateResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/calculate_result"
        android:textSize="24sp"
        android:gravity="center"
        android:textStyle="bold"/>

</LinearLayout>